objects/CSD_Channel_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Region__c</fullName>
        <label>Billing Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Date__c</fullName>
        <formula>DATE( VALUE( Fiscal_Year__c ) , VALUE( Fiscal_Month__c ) ,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <label>Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSD Channel Forecasts</relationshipLabel>
        <relationshipName>CSD_Channel_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CSD Channel Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CSD Channel Forecast</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSD Channel Forecasts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>